slideshow hides and topnav bar padding decreases with smaller screens. This ensures the objects don't collide with each other on mobile screens

--- a/portfolio_website/src/resources/css/mainStyle.css
+++ b/portfolio_website/src/resources/css/mainStyle.css
@@ -69,14 +69,14 @@
           box-shadow: 2px 2px 2px grey;
   	  }
 
-  	  /* Style the topnav links */
+  	  /* Style the topnav menu links */
   	  .topnav a {
           font-family: "Courier New", Courier, monospace;
   	      float: left;
   	      display: block;
   	      color: #f2f2f2;
   	      text-align: center;
-  	      padding: 14px 16px;
+  	      padding: 15px 16px;
   	      text-decoration: none;
   	  }
 
@@ -136,7 +136,7 @@
       }
 
 
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 360px) {
        .topnav a:not(:first-child) {display: none;}
        .topnav a.icon {
            float: right;
@@ -144,7 +144,7 @@
        }
    }
 
-   @media screen and (max-width: 500px) {
+   @media screen and (max-width: 360px) {
        .topnav.responsive {position: relative;}
        .topnav.responsive a.icon {
            position: absolute;
@@ -156,6 +156,7 @@
        float: none;
        display: block;
        text-align: left;
+       padding: 5px 16px; /* So the topnav doesn't collide with the slideshow */
     }
    }
 
